[gd_scene load_steps=18 format=2]

[ext_resource path="res://Widget/Map/Coin-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Coin.gd" type="Script" id=2]
[ext_resource path="res://Widget/Map/Sound/collectcoin-6075.mp3" type="AudioStream" id=3]
[ext_resource path="res://Widget/Map/SmallShadow.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 10, 8 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Shadow",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Coin",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 16.0

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.00816326, 0.979592, 1 )
colors = PoolColorArray( 0.00571429, 0.00571429, 0.00571429, 1, 0.930664, 1, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 150, 0 )
initial_velocity = 75.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.898039, 1, 0, 1 )
color_ramp = SubResource( 8 )

[sub_resource type="Animation" id=13]
resource_name = "Wave"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[node name="Coin" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Shadow" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, 13 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 12 )
animation = "Shadow"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Idle"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
one_shot = true
process_material = SubResource( 9 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Wave = SubResource( 13 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
